добавляет шрифт roboto в variables.scss

--- a/source/html/layout/header.html
+++ b/source/html/layout/header.html
@@ -1,5 +1,7 @@
 <header class="header" data-theme="dark">
 	<div class="container">
-
+		<header>
+			<h2>Header</h2>
+		</header>
 	</div>
 </header>
