--- a/source/html/layout/footer.html
+++ b/source/html/layout/footer.html
@@ -1,3 +1,7 @@
 <footer class="footer">
-    <div class="container"></div>
+    <div class="container">
+        <footer>
+            <h2>Footer</h2>
+        </footer>
+    </div>
 </footer>
