--- a/source/styles/global/variables.scss
+++ b/source/styles/global/variables.scss
@@ -1,12 +1,11 @@
-$primary-font: 'gropled',
+$primary-font: 'roboto',
 'Arial',
 sans-serif;
+
 $secondary-font: 'manrope',
 'Roboto',
 sans-serif;
-$text-font: 'manrope',
-'Arial',
-sans-serif;
+
 
 $tablet: 768px;
 $desktop: 1680px;
