--- a/source/styles/global/common.scss
+++ b/source/styles/global/common.scss
@@ -7,10 +7,38 @@
 }
 
 .page {
-	&__body {}
+	&__body {
+		font-family: $primary-font;
+		font-size: 16px;
+		margin: 0;
+		padding: 0;
+		transition: 0.3s ease-in-out;
+		color: $base-color-background;
+		
+
+		.overlay {
+			&.active {
+				/* background-color: $base-color-background-inverse; */
+				opacity: .8;
+				min-height: 100vh;
+				min-width: 100vw;
+				position: absolute;
+				top: 0;
+				left: 0;
+			}
+		}
+
+		&.hidden {
+			overflow: hidden;
+		}
+	}
 }
 
 .container {
+	max-width: 860px;
+	margin: 0 auto;
+	padding: 0 10px;
+	min-height: 200px;
 
 	@media screen and (min-width: $desktop) {
 		padding: 0 80px;
@@ -23,7 +51,7 @@ img {
 }
 
 .link {
-	font-family: "roboto";
+	font-family: $primary-font;
 	text-decoration: none;
 	transition: 0.3s ease-in-out;
 
