--- a/source/styles/layout/text.scss
+++ b/source/styles/layout/text.scss
@@ -1,6 +1,6 @@
 @import './../global/variables.scss';
 
-.secondary-title {
+/* .secondary-title {
 	font-size: 74px;
 	line-height: 84px;
 	margin: 0 0 80px 0;
@@ -18,4 +18,4 @@
 	font-family: $secondary-font;
 	margin: 0;
 	letter-spacing: 0.4px;
-}
+} */
