--- a/source/styles/css/common.css
+++ b/source/styles/css/common.css
@@ -8,11 +8,11 @@
 .page__body {
   font-family: "roboto", "Arial", sans-serif;
   font-size: 16px;
+  color: #000000;
   margin: 0;
   padding: 0;
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
-  color: #EEEEEE;
 }
 .page__body .overlay.active {
   /* background-color: $base-color-background-inverse; */
