--- a/source/styles/global/common.scss
+++ b/source/styles/global/common.scss
@@ -10,10 +10,11 @@
 	&__body {
 		font-family: $primary-font;
 		font-size: 16px;
+		color: $base-color-text;
 		margin: 0;
 		padding: 0;
 		transition: 0.3s ease-in-out;
-		color: $base-color-background;
+		
 		
 
 		.overlay {
