сетка header na flex

--- a/source/html/layout/header.html
+++ b/source/html/layout/header.html
@@ -1,7 +1,30 @@
-<header class="header" data-theme="dark">
+<header class="header">
 	<div class="container">
-		<header>
-			
-		</header>
+		<div class="header__wrapper">
+			<a class="header__link">
+				<img class="header__logo" src="./../../images/icons/nerds-logo.svg" alt="Логотип Нердс" width="160" height="66" >
+			</a>
+			<nav class="navigation">
+				<ul class="navigation__list">
+					<li class="navigation__item">
+						<a class="navigation__link navigation__link-current" href="#">Студия</a>
+					</li>
+					<li class="navigation__item">
+						<a class="navigation__link" href="#">Клиенты</a>
+					</li>
+					<li class="navigation__item">
+						<a class="navigation__link" href="#">Магазин</a>
+					</li>
+					<li class="navigation__item">
+						<a class="navigation__link" href="#">Контакты</a>
+					</li>
+				</ul>
+			</nav>
+			<ul class="user-navigation__list">
+				<li class="user-navigation__item">
+					<button class="user-navigation__button">Корзина</button>
+				</li>
+			</ul>
+		</div>
 	</div>
 </header>
