--- a/source/styles/css/header.css
+++ b/source/styles/css/header.css
@@ -29,6 +29,9 @@ header {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  max-width: 700px;
+  margin-left: 60px;
+  margin-right: 40px;
   /* margin-left: 202px;
   margin-right: 246px; */
 }
