--- a/source/styles/layout/header.scss
+++ b/source/styles/layout/header.scss
@@ -16,6 +16,7 @@ header {
 	&__logo {
 		width: 160px;
 		height: 66px;
+		
 	}
 }
 
@@ -25,8 +26,10 @@ header {
 		margin: 0;
 		padding: 0;
 		display: flex;
-		
 		flex-wrap: wrap;
+		max-width: 700px;
+		margin-left: 60px;
+		margin-right: 40px;
 		/* margin-left: 202px;
 		margin-right: 246px; */
 	}
