добавляет стили состояния ссылок в навигации

--- a/source/html/layout/header.html
+++ b/source/html/layout/header.html
@@ -10,10 +10,10 @@
 						<a class="navigation__link navigation__link-current" href="#">Студия</a>
 					</li>
 					<li class="navigation__item">
-						<a class="navigation__link" href="#">Клиенты</a>
+						<a class="navigation__link " href="#">Клиенты</a>
 					</li>
 					<li class="navigation__item">
-						<a class="navigation__link" href="#">Магазин</a>
+						<a class="navigation__link " href="#">Магазин</a>
 					</li>
 					<li class="navigation__item">
 						<a class="navigation__link" href="#">Контакты</a>
@@ -22,7 +22,7 @@
 			</nav>
 			<ul class="user-navigation__list">
 				<li class="user-navigation__item">
-					<button class="user-navigation__button">Корзина</button>
+					<a class="navigation__link navigation__link-current" href="">Корзина</a>
 				</li>
 			</ul>
 		</div>
