--- a/source/styles/layout/header.scss
+++ b/source/styles/layout/header.scss
@@ -27,26 +27,27 @@ header {
 		display: flex;
 	}
 
-	&__button {
-		font-family: $primary-font;
+	&__item {
 		font-size: 16px;
 		font-weight: 500;
 		line-height: 30px;
-		width: 130px;
-		border: none;
 		text-transform: uppercase;
-		cursor: pointer;
-		padding-left: 25px;
 		position: relative;
+		padding-left: 20px;
 	}
 
-	&__button::before {
+	&__item::after {
 		content:'';
 		position: absolute;
 		width: 15px;
 		height: 15px;
 		background-image: url('./../../images/icons/cart-icon.svg');
 		top: 8px;
-		left: 0px;
+		left: -18px;
 	}
+
+	&__item a{
+		text-decoration: none;
+	}
+
 }
