добавляет состояния ссылки Корзина

--- a/source/html/layout/header.html
+++ b/source/html/layout/header.html
@@ -22,7 +22,7 @@
 			</nav>
 			<ul class="user-navigation__list">
 				<li class="user-navigation__item">
-					<a class="navigation__link navigation__link-current" href="">Корзина</a>
+					<a class="user-navigation__link" href="">Корзина</a>
 				</li>
 			</ul>
 		</div>
