--- a/source/styles/blocks/user-nav.scss
+++ b/source/styles/blocks/user-nav.scss
@@ -17,7 +17,40 @@
 		padding-left: 20px;
 	}
 
-	&__item::after {
+  &__item a{
+		text-decoration: none;
+	}
+
+  &__link {
+    position: relative;
+  }
+
+  &__link::before {
+    position: absolute;
+    content: "";
+    width: 15px;
+    height: 15px;
+    background-image: url('./../../images/icons/cart-icon.svg');
+		top: 2px;
+		left: -40px;
+  }
+
+  &__link:hover {
+    color: $base-background-main;
+  }
+
+  &__link:active,
+  &__link:focus {
+    /* color: $base-color-text;
+    opacity: 30%; */
+    color: rgba(0,0,0,0.3); 
+  }
+
+  &__link:active::before {
+    opacity: 100%;
+  }
+
+  /* &__item::after {
 		content:'';
 		position: absolute;
 		width: 15px;
@@ -25,9 +58,5 @@
 		background-image: url('./../../images/icons/cart-icon.svg');
 		top: 8px;
 		left: -18px;
-	}
-
-	&__item a{
-		text-decoration: none;
-	}
+	} */
 }
