--- a/source/styles/css/user-nav.css
+++ b/source/styles/css/user-nav.css
@@ -1,3 +1,14 @@
+.user-navigation {
+  /* &__item::after {
+  	content:'';
+  	position: absolute;
+  	width: 15px;
+  	height: 15px;
+  	background-image: url('./../../images/icons/cart-icon.svg');
+  	top: 8px;
+  	left: -18px;
+  } */
+}
 .user-navigation__list {
   list-style: none;
   margin: 0;
@@ -14,15 +25,29 @@
   position: relative;
   padding-left: 20px;
 }
-.user-navigation__item::after {
-  content: "";
+.user-navigation__item a {
+  text-decoration: none;
+}
+.user-navigation__link {
+  position: relative;
+}
+.user-navigation__link::before {
   position: absolute;
+  content: "";
   width: 15px;
   height: 15px;
   background-image: url("./../../images/icons/cart-icon.svg");
-  top: 8px;
-  left: -18px;
+  top: 2px;
+  left: -40px;
 }
-.user-navigation__item a {
-  text-decoration: none;
+.user-navigation__link:hover {
+  color: #FB565A;
+}
+.user-navigation__link:active, .user-navigation__link:focus {
+  /* color: $base-color-text;
+  opacity: 30%; */
+  color: rgba(0, 0, 0, 0.3);
+}
+.user-navigation__link:active::before {
+  opacity: 100%;
 }/*# sourceMappingURL=user-nav.css.map */
