--- a/source/html/layout/header.html
+++ b/source/html/layout/header.html
@@ -10,10 +10,10 @@
 			<nav class="navigation">
 				<ul class="navigation__list">
 					<li class="navigation__item">
-						<a class="navigation__link navigation__link-current" href="#">Студия</a>
+						<a class="navigation__link " href="#">Студия</a>
 					</li>
 					<li class="navigation__item">
-						<a class="navigation__link " href="#">Клиенты</a>
+						<a class="navigation__link navigation__link-current" href="#">Клиенты</a>
 					</li>
 					<li class="navigation__item">
 						<a class="navigation__link " href="#">Магазин</a>
@@ -25,7 +25,7 @@
 			</nav>
 			<ul class="user-navigation__list">
 				<li class="user-navigation__item">
-					<a class="user-navigation__link" href="#">Корзина</a>
+					<a class="user-navigation__link navigation__link-current" href="#">Корзина</a>
 				</li>
 			</ul>
 		</div>
