--- a/source/styles/css/styles.css
+++ b/source/styles/css/styles.css
@@ -1,3 +1,12 @@
+.navigation {
+  /* &__link-current {
+  	color: $base-color-text;
+  	border-bottom: 2px solid $base-background-main;
+  	padding-bottom: 22px;
+  	opacity: 100%;
+  	pointer-events: none;
+  } */
+}
 .navigation__list {
   list-style: none;
   margin: 0;
@@ -23,6 +32,7 @@
 }
 .navigation__item a {
   text-decoration: none;
+  padding-bottom: 25px;
 }
 .navigation__link:hover {
   color: #FB565A;
@@ -31,14 +41,18 @@
   color: #000000;
   opacity: 30%;
 }
-.navigation__link-current {
-  color: #000000;
-  border-bottom: 2px solid #FB565A;
-  padding-bottom: 22px;
-  opacity: 100%;
-  pointer-events: none;
-}
 
+.user-navigation {
+  /* &__item::after {
+  	content:'';
+  	position: absolute;
+  	width: 15px;
+  	height: 15px;
+  	background-image: url('./../../images/icons/cart-icon.svg');
+  	top: 8px;
+  	left: -18px;
+  } */
+}
 .user-navigation__list {
   list-style: none;
   margin: 0;
@@ -55,15 +69,29 @@
   position: relative;
   padding-left: 20px;
 }
-.user-navigation__item::after {
-  content: "";
+.user-navigation__item a {
+  text-decoration: none;
+}
+.user-navigation__link {
+  position: relative;
+}
+.user-navigation__link::before {
   position: absolute;
+  content: "";
   width: 15px;
   height: 15px;
   background-image: url("./../../images/icons/cart-icon.svg");
-  top: 8px;
-  left: -18px;
+  top: 2px;
+  left: -40px;
 }
-.user-navigation__item a {
-  text-decoration: none;
+.user-navigation__link:hover {
+  color: #FB565A;
+}
+.user-navigation__link:active, .user-navigation__link:focus {
+  /* color: $base-color-text;
+  opacity: 30%; */
+  color: rgba(0, 0, 0, 0.3);
+}
+.user-navigation__link:active::before {
+  opacity: 100%;
 }/*# sourceMappingURL=styles.css.map */
