--- a/source/styles/css/header.css
+++ b/source/styles/css/header.css
@@ -18,6 +18,6 @@
   cursor: pointer;
   opacity: 70%;
 }
-.header__logo:focus path {
+.header__logo:focus path, .header__logo:active path {
   opacity: 30%;
 }/*# sourceMappingURL=header.css.map */
