--- a/source/styles/global/variables.scss
+++ b/source/styles/global/variables.scss
@@ -23,5 +23,7 @@ $base-background-button-filter-active: #D5D5D5;
 $base-background-social: #E1E1E1;      
 $base-background-shape: #4D4D4D;
 
+$special-color-icons: rgba(0,0,0,0.3);
+
 $tablet: 768px;
 $desktop: 1680px;
