добавляет состояние visited для ссылок навигации

--- a/source/styles/blocks/navigation.scss
+++ b/source/styles/blocks/navigation.scss
@@ -39,10 +39,13 @@
 		opacity: 30%;
 	}
 
+	&__link:visited {
+		color: $base-color-text;
+	}
+
 	&__link-current {
 		color: $base-color-text;
 		border-bottom: 2px solid $base-background-main;
-		/* padding-bottom: 22px; */
 		opacity: 100%;
 		pointer-events: none;
 	}
