добавляет разметку в foote

--- a/source/html/layout/footer.html
+++ b/source/html/layout/footer.html
@@ -1,7 +1,22 @@
 <footer class="footer">
     <div class="container">
         <footer>
-            
+            <h2 class="visually-hidden">Социальные сети</h2>
+            <ul class="footer-social__list">
+                <li class="footer-social__item">
+                    <a href=""><span>Вконтакте</span></a>
+                </li>
+                <li class="footer-social__item">
+                    <a href=""><span>Facebook</span></a>
+                </li>
+                <li class="footer-social__item">
+                    <a href=""><span>Youtube</span></a>
+                </li>
+            </ul>
+            <div class="footer-desc">
+                <p class="footer-desc__title">Давайте дружить, это выгодно!</p>
+                <p class="footer-desc__text">Скидка 10% для друзей из социальных сетей.</p>
+            </div>
         </footer>
     </div>
 </footer>
