--- a/source/styles/css/footer.css
+++ b/source/styles/css/footer.css
@@ -1,4 +1,4 @@
 footer {
-  background-color: rgb(232, 130, 130);
-  font-family: "roboto", "Arial", sans-serif;
+  min-height: 223px;
+  background-color: #EEEEEE;
 }/*# sourceMappingURL=footer.css.map */
