--- a/source/styles/css/user-navigation.css
+++ b/source/styles/css/user-navigation.css
@@ -31,6 +31,9 @@
   top: 2px;
   left: -4px;
 }
+.user-navigation__link:visited {
+  color: #000000;
+}
 .user-navigation__link:hover {
   color: #FB565A;
 }
