--- a/source/styles/global/common.scss
+++ b/source/styles/global/common.scss
@@ -7,7 +7,12 @@
 }
 
 .page {
+	height: 100%;
+
 	&__body {
+		min-height: 100%;
+		display: grid;
+		grid-template-rows: min-content 1fr min-content;
 		font-family: $primary-font;
 		font-size: 16px;
 		color: $base-color-text;
