--- a/source/styles/css/footer.css
+++ b/source/styles/css/footer.css
@@ -7,4 +7,47 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.footer-social__item a {
+  width: 81px;
+  height: 81px;
+  background-color: #E1E1E1;
+  border-radius: 50%;
+  margin-right: 9px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.footer-social__item a:visited {
+  background-color: #E1E1E1;
+}
+.footer-social__item a:hover, .footer-social__item a:focus {
+  background-color: #E74246;
+}
+.footer-social__item a:active {
+  background-color: #D7373B;
+}
+.footer-social__link:active svg path {
+  opacity: 30%;
+}
+.footer-social__item-vk {
+  width: 26px;
+  height: 15px;
+}
+.footer-social__item-fb {
+  width: 12px;
+  height: 22px;
+}
+.footer-social__item-instagram {
+  width: 21px;
+  height: 21px;
 }/*# sourceMappingURL=footer.css.map */
