--- a/source/styles/layout/footer.scss
+++ b/source/styles/layout/footer.scss
@@ -10,5 +10,49 @@
 		list-style: none;
 		margin: 0;
 		padding: 0;
+		display: flex;
+	}
+
+	&__item a {
+		width: 81px;
+		height: 81px;
+		background-color: $base-background-social;
+		border-radius: 50%;
+		margin-right: 9px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	&__item a:visited {
+		background-color: $base-background-social;
+	}
+
+	&__item a:hover,
+	&__item a:focus {
+		background-color: $base-background-main-focus;
+	}
+
+	&__item a:active {
+		background-color: $base-background-main-active;
+	}
+
+	&__link:active svg path{
+		opacity: 30%;
+	}
+
+	&__item-vk {
+		width: 26px;
+		height: 15px;
+	}
+
+	&__item-fb {
+		width: 12px;
+		height: 22px;
+	}
+
+	&__item-instagram {
+		width: 21px;
+		height: 21px;
 	}
 }
