--- a/source/styles/layout/footer.scss
+++ b/source/styles/layout/footer.scss
@@ -2,15 +2,23 @@
 
 .footer {
 	min-height: 223px;
-	background-color: $base-color-background;
+	border: 1px solid red;
+	
+	&__wrapper {
+		padding-top: 68px;
+		display: flex;
+	}
 }
 
 .footer-social {
 	&__list {
+		max-width: 400px;
 		list-style: none;
 		margin: 0;
 		padding: 0;
 		display: flex;
+		flex-wrap: wrap;
+		margin-right: 139px;
 	}
 
 	&__item a {
@@ -19,9 +27,14 @@
 		background-color: $base-background-social;
 		border-radius: 50%;
 		margin-right: 9px;
+		margin-bottom: 9px;
 		display: flex;
 		justify-content: center;
 		align-items: center;
+	}
+
+	&__item:last-child a{
+		margin-right: 0;
 	}
 
 	&__item a:visited {
@@ -54,5 +67,22 @@
 	&__item-instagram {
 		width: 21px;
 		height: 21px;
+	}
+}
+
+.footer-desc {
+	max-width: 660px;
+
+	&__title {
+		margin: 0;
+		font-size: 36px;
+		font-weight: 700;
+		line-height: 36px;
+		margin-bottom: 10px;
+	}
+
+	&__text {
+		margin: 0;
+		margin-bottom: 10px;
 	}
 }
