--- a/source/styles/global/variables.scss
+++ b/source/styles/global/variables.scss
@@ -3,6 +3,7 @@ $primary-font: 'roboto',
 sans-serif;
 
 $base-color-text: #000000;
+$light-color-text: #ffffff;
 $base-color-background: #EEEEEE;
 
 $base-background-main: #FB565A;
@@ -24,6 +25,7 @@ $base-background-social: #E1E1E1;
 $base-background-shape: #4D4D4D;
 
 $special-color-icons: rgba(0,0,0,0.3);
+$special-color-pagination-btn: #C1C1C1;
 
 $tablet: 768px;
 $desktop: 1680px;
