--- a/source/styles/blocks/slider.scss
+++ b/source/styles/blocks/slider.scss
@@ -1,5 +1,102 @@
 @import './../global/variables.scss';
 
 .slider {
+  min-height: 545px;
   background-color: $base-color-background;
+  position: relative;
+
+  &__list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    
+    
+  }
+
+  &__item {
+    max-width: 1157px;
+    min-height: 431px;
+    background-image: url('./../../images/decors/slider/slide-1.png');
+    background-repeat: no-repeat;
+    background-size: 760px 431px;
+    background-position: 380px 0;
+  }
+
+  &__item-desc {
+    max-width: 400px;
+  }
+
+  &__item-title {
+    margin: 0;
+    padding-top: 70px;
+    font-size: 55px;
+    font-weight: 500;
+    line-height: 55px;
+    margin-bottom: 26px;
+  }
+
+  &__item-text {
+    margin: 0;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    margin-bottom: 38px;
+  }
+
+  &__item-btn {
+    text-decoration: none;
+    text-transform: uppercase;
+    background-color: $base-background-main;
+    color: $light-color-text;
+    padding: 17px 50px;
+    display: block;
+    max-width: 240px;
+    
+  }
+}
+
+/*Пагинация*/
+.slider-pagination {
+  &__list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    position: absolute;
+    top: 317px;
+    left: 670px;
+  }
+
+  &__item {
+    margin-right: 17px;
+  }
+
+  &__item:last-child {
+    margin-right: 0;
+  }
+
+  &__btn {
+    width: 18px;
+    height: 18px;
+    background-color: $light-color-text;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    position: relative;
+  }
+
+  &__btn::before {
+    content: '';
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    border: 2px solid $special-color-pagination-btn;
+    border-radius: 50%;
+    top: 5px;
+    left: 5px;
+  }
+
+  &__active {
+    
+  }
 }
