--- a/source/styles/blocks/slider.scss
+++ b/source/styles/blocks/slider.scss
@@ -1,7 +1,6 @@
 @import './../global/variables.scss';
 
 .slider {
-  min-height: 545px;
   background-color: $base-color-background;
   position: relative;
 
@@ -9,17 +8,14 @@
     list-style: none;
     margin: 0;
     padding: 0;
-    
-    
+    position: relative;
   }
 
   &__item {
-    max-width: 1157px;
     min-height: 431px;
     background-image: url('./../../images/decors/slider/slide-1.png');
     background-repeat: no-repeat;
-    background-size: 760px 431px;
-    background-position: 380px 0;
+    background-position: right;
   }
 
   &__item-desc {
@@ -51,7 +47,6 @@
     padding: 17px 50px;
     display: block;
     max-width: 240px;
-    
   }
 }
 
@@ -64,7 +59,7 @@
     display: flex;
     position: absolute;
     top: 317px;
-    left: 670px;
+    left: 50%;
   }
 
   &__item {
@@ -85,7 +80,7 @@
     position: relative;
   }
 
-  &__btn::before {
+  /* &__btn::before {
     content: '';
     position: absolute;
     width: 8px;
@@ -94,9 +89,13 @@
     border-radius: 50%;
     top: 5px;
     left: 5px;
-  }
+  } */
 
   &__active {
+    /* width: 8px;
+    height: 8px; */
     
+    border: 2px solid $special-color-pagination-btn;
+    /* border-radius: 50%; */
   }
 }
