--- a/source/styles/css/slider.css
+++ b/source/styles/css/slider.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 .slider {
-  min-height: 545px;
   background-color: #EEEEEE;
   position: relative;
 }
@@ -8,14 +7,13 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  position: relative;
 }
 .slider__item {
-  max-width: 1157px;
   min-height: 431px;
   background-image: url("./../../images/decors/slider/slide-1.png");
   background-repeat: no-repeat;
-  background-size: 760px 431px;
-  background-position: 380px 0;
+  background-position: right;
 }
 .slider__item-desc {
   max-width: 400px;
@@ -46,6 +44,18 @@
 }
 
 /*Пагинация*/
+.slider-pagination {
+  /* &__btn::before {
+    content: '';
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    border: 2px solid $special-color-pagination-btn;
+    border-radius: 50%;
+    top: 5px;
+    left: 5px;
+  } */
+}
 .slider-pagination__list {
   list-style: none;
   margin: 0;
@@ -55,7 +65,7 @@
   display: flex;
   position: absolute;
   top: 317px;
-  left: 670px;
+  left: 50%;
 }
 .slider-pagination__item {
   margin-right: 17px;
@@ -72,13 +82,9 @@
   cursor: pointer;
   position: relative;
 }
-.slider-pagination__btn::before {
-  content: "";
-  position: absolute;
-  width: 8px;
-  height: 8px;
+.slider-pagination__active {
+  /* width: 8px;
+  height: 8px; */
   border: 2px solid #C1C1C1;
-  border-radius: 50%;
-  top: 5px;
-  left: 5px;
+  /* border-radius: 50%; */
 }/*# sourceMappingURL=slider.css.map */
