--- a/source/styles/blocks/slider.scss
+++ b/source/styles/blocks/slider.scss
@@ -80,22 +80,12 @@
     position: relative;
   }
 
-  /* &__btn::before {
-    content: '';
-    position: absolute;
-    width: 8px;
-    height: 8px;
-    border: 2px solid $special-color-pagination-btn;
-    border-radius: 50%;
-    top: 5px;
-    left: 5px;
-  } */
+  &__btn:hover {
+    border: 3px solid $special-color-pagination-btn;
+  }
 
   &__active {
-    /* width: 8px;
-    height: 8px; */
-    
-    border: 2px solid $special-color-pagination-btn;
-    /* border-radius: 50%; */
+    padding: 5px;
+    border: 3px solid $special-color-pagination-btn;
   }
 }
