--- a/source/styles/css/slider.css
+++ b/source/styles/css/slider.css
@@ -44,18 +44,6 @@
 }
 
 /*Пагинация*/
-.slider-pagination {
-  /* &__btn::before {
-    content: '';
-    position: absolute;
-    width: 8px;
-    height: 8px;
-    border: 2px solid $special-color-pagination-btn;
-    border-radius: 50%;
-    top: 5px;
-    left: 5px;
-  } */
-}
 .slider-pagination__list {
   list-style: none;
   margin: 0;
@@ -82,9 +70,10 @@
   cursor: pointer;
   position: relative;
 }
+.slider-pagination__btn:hover {
+  border: 3px solid #C1C1C1;
+}
 .slider-pagination__active {
-  /* width: 8px;
-  height: 8px; */
-  border: 2px solid #C1C1C1;
-  /* border-radius: 50%; */
+  padding: 5px;
+  border: 3px solid #C1C1C1;
 }/*# sourceMappingURL=slider.css.map */
