--- a/source/styles/blocks/slider.scss
+++ b/source/styles/blocks/slider.scss
@@ -49,7 +49,18 @@
     padding: 17px 50px;
     display: block;
     max-width: 240px;
+    border-radius: 3px;
     position: relative;
+  }
+
+  &__item-btn:hover,
+  &__item-btn:focus {
+    background-color: $base-background-main-focus;
+  }
+
+  &__item-btn:active {
+    background-color: $base-background-main-active;
+    color: $special-color-icons;
   }
 }
 
@@ -79,7 +90,7 @@
   }
 }
 
-.active::before {
+.slider-active::before {
   content: '';
   position: absolute;
   width: 8px;
