удаляет состояние focus у ссылок

--- a/source/styles/layout/footer.scss
+++ b/source/styles/layout/footer.scss
@@ -41,8 +41,7 @@
 		background-color: $base-background-social;
 	}
 
-	&__item a:hover,
-	&__item a:focus {
+	&__item a:hover {
 		background-color: $base-background-main-focus;
 	}
 
