--- a/source/styles/css/footer.css
+++ b/source/styles/css/footer.css
@@ -44,7 +44,7 @@
 .footer-social__item a:visited {
   background-color: #E1E1E1;
 }
-.footer-social__item a:hover, .footer-social__item a:focus {
+.footer-social__item a:hover {
   background-color: #E74246;
 }
 .footer-social__item a:active {
