удаляет состояние focus у ссылок меню

--- a/source/html/layout/header.html
+++ b/source/html/layout/header.html
@@ -19,7 +19,7 @@
 						<a class="navigation__link" href="#">Клиенты</a>
 					</li>
 					<li class="navigation__item">
-						<a class="navigation__link" href="./../../catalog.html">Магазин</a>
+						<a class="navigation__link" href="./../../catalog.html" target="_blank">Магазин</a>
 					</li>
 					<li class="navigation__item">
 						<a class="navigation__link" href="#">Контакты</a>
