--- a/source/styles/css/navigation.css
+++ b/source/styles/css/navigation.css
@@ -31,7 +31,7 @@
 .navigation__link:hover {
   color: #FB565A;
 }
-.navigation__link:active, .navigation__link:focus {
+.navigation__link:active {
   color: #000000;
   opacity: 30%;
 }
