--- a/source/styles/css/styles.css
+++ b/source/styles/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .navigation__list {
   list-style: none;
   margin: 0;
@@ -31,7 +32,7 @@
 .navigation__link:hover {
   color: #FB565A;
 }
-.navigation__link:active, .navigation__link:focus {
+.navigation__link:active {
   color: #000000;
   opacity: 30%;
 }
@@ -82,14 +83,112 @@
   color: #FB565A;
 }
 .user-navigation__link:active, .user-navigation__link:focus {
-  color: rgba(0, 0, 0, 0.3);
+  color: rgba(250, 250, 250, 0.3);
 }
 .user-navigation__link:active::before {
   opacity: 100%;
 }
 
 .slider {
-  min-height: 545px;
-  background-color: red;
-  /* background-color: $base-color-background; */
+  background-color: #EEEEEE;
+  position: relative;
+}
+.slider__list {
+  min-height: 431px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: relative;
+}
+.slider__item-active {
+  width: 100%;
+  min-height: 431px;
+  background-image: url("./../../images/decors/slider/slide-2.png");
+  background-repeat: no-repeat;
+  background-position: right;
+  position: absolute;
+  opacity: 1;
+}
+.slider__item {
+  position: absolute;
+  opacity: 0;
+}
+.slider__item-wrapper {
+  max-width: 515px;
+}
+.slider__item-title {
+  margin: 0;
+  padding-top: 70px;
+  font-size: 55px;
+  font-weight: 500;
+  line-height: 55px;
+  margin-bottom: 26px;
+}
+.slider__item-text {
+  max-width: 416px;
+  margin: 0;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  margin-bottom: 38px;
+}
+.slider__item-btn {
+  text-decoration: none;
+  text-transform: uppercase;
+  background-color: #FB565A;
+  color: #ffffff;
+  padding: 17px 50px;
+  display: block;
+  max-width: 240px;
+  border-radius: 3px;
+}
+.slider__item-btn:hover, .slider__item-btn:focus {
+  background-color: #E74246;
+}
+.slider__item-btn:active {
+  background-color: #D7373B;
+  color: rgba(250, 250, 250, 0.3);
+}
+
+/*Пагинация*/
+.slider-pagination__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  top: 317px;
+  left: 50%;
+}
+.slider-pagination__btn {
+  width: 18px;
+  height: 18px;
+  background-color: #ffffff;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+  margin-right: 17px;
+}
+.slider-pagination__btn:last-child {
+  margin-right: 0;
+}
+
+.slider-pagination-active::before {
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  border: 2px solid #C1C1C1;
+  border-radius: 50%;
+  top: 5px;
+  left: 5px;
+}
+
+.map {
+  width: 500px;
+  height: 500px;
+  background-color: #ed9494;
 }/*# sourceMappingURL=styles.css.map */
