--- a/source/styles/blocks/map.scss
+++ b/source/styles/blocks/map.scss
@@ -20,9 +20,8 @@
     width: 231px;
     height: 190px;
     background-image: url('./../../images/icons/map-marker.svg');
-    top: 20px;
-    right: 220px;
-    
+    top: 18%;
+    right: 20%;
   }
 }
 
