--- a/source/styles/blocks/map.scss
+++ b/source/styles/blocks/map.scss
@@ -76,3 +76,47 @@
   }
 }
 
+/*Модальное окно*/
+.modal-container {
+  position: fixed;
+  display: flex;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(166, 163, 163, 0.8);
+}
+
+.modal {
+  position: relative;
+  margin: auto;
+  background-color: $light-color-text;
+  padding: 63px 100px 84px;
+  
+  &__auth {
+    width: 960px;
+  }
+
+  &__close-btn {
+    position: absolute;
+    padding: 0;
+    top: 0;
+    right: 0;
+    width: 21px;
+    height: 21px;
+    background-color: transparent;
+    border: none;
+    background-image: url('./../../images/icons/close-cross.svg');
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    cursor: pointer;
+  }
+
+  &__title {
+    margin: 0;
+    font-size: 45px;
+    font-weight: 700;
+    line-height: 53px;
+  }
+}
