--- a/source/styles/blocks/map.scss
+++ b/source/styles/blocks/map.scss
@@ -85,7 +85,6 @@
   display: flex;
   width: 100%;
   height: 100%;
-  background-color: rgba(166, 163, 163, 0.8);
 }
 
 .modal {
@@ -93,6 +92,7 @@
   margin: auto;
   background-color: $light-color-text;
   padding: 63px 100px 84px;
+  box-shadow: 0 20px 40px 0 $special-color-box-shadow;
   
   &__auth {
     width: 960px;
@@ -101,8 +101,8 @@
   &__close-btn {
     position: absolute;
     padding: 0;
-    top: 0;
-    right: 0;
+    top: 78px;
+    right: 90px;
     width: 21px;
     height: 21px;
     background-color: transparent;
@@ -118,5 +118,112 @@
     font-size: 45px;
     font-weight: 700;
     line-height: 53px;
+    margin-bottom: 37px;
+  }
+}
+
+.auth-form {
+  &__list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 34px;
+  }
+
+  &__item {
+    margin-right: 40px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__item:last-child {
+    margin-right: 0;
+  }
+
+  &__title{
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 18px;
+    margin-bottom: 9px;
+  }
+
+  &__input {
+    width: 360px;
+    height: 50px;
+    border: 2px solid $special-border-modal-form;
+    border-radius: 3px;
+    padding: 16px;
+  }
+
+  &__input::placeholder {
+    font-family: $primary-font;
+    font-size: 16px;
+    line-height: 18px;
+    color: $special-modal-placeholder;
+    opacity: 0.5;
+  }
+
+  &__input:hover,
+  &__textarea:hover {
+    border-color: $special-modal-hover;
+  }
+
+  &__input:focus,
+  &__textarea:focus {
+    border-color: $base-color-text;
+  }
+  
+  &__input:invalid,
+  &__textarea:invalid {
+    border-color: $base-background-main-focus;
+  }
+
+  &__input:invalid::placeholder,
+  &__textarea:invalid::placeholder {
+    color: $base-background-main-focus;
+  }
+
+  &__text {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__textarea {
+    resize: none;
+    max-width: 760px;
+    min-height: 118px;
+    border: 2px solid $special-border-modal-form;
+    border-radius: 3px;
+    margin-bottom: 47px;
+    padding: 16px;
+  }
+
+  &__textarea::placeholder {
+    font-family: $primary-font;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 18px;
+    color: $special-modal-placeholder;
+    opacity: 0.5;
+  }
+
+  &__btn {
+    font-family: inherit;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 18px;
+    text-transform: uppercase;
+    background-color: $base-background-main;
+    color: $light-color-text;
+    padding: 17px 83px;
+    display: block;
+    max-width: 259px;
+    border-radius: 3px;
+    border: none;
+    cursor: pointer;
+
   }
 }
