--- a/source/styles/global/variables.scss
+++ b/source/styles/global/variables.scss
@@ -25,7 +25,12 @@ $base-background-social: #E1E1E1;
 $base-background-shape: #4D4D4D;
 
 $special-color-icons: rgba(250,250,250,0.3);
+$special-color-box-shadow: rgba(0, 0, 0, 0.4);
 $special-color-pagination-btn: #C1C1C1;
+
+$special-border-modal-form: #D7DCDE;
+$special-modal-placeholder: #444444;
+$special-modal-hover: #B4B9BB;
 
 $tablet: 768px;
 $desktop: 1680px;
