добавляет стили состояния для кнопки напишите нам на карте

--- a/source/styles/blocks/map.scss
+++ b/source/styles/blocks/map.scss
@@ -74,6 +74,16 @@
     border: none;
     cursor: pointer;
   }
+
+  &__btn:hover,
+  &__btn:focus {
+    background-color: $base-background-main-focus;
+  }
+
+  &__btn:active {
+    background-color: $base-background-main-active;
+    color: $special-color-icons;
+  }
 }
 
 /*Модальное окно*/
