--- a/source/styles/blocks/map.scss
+++ b/source/styles/blocks/map.scss
@@ -92,12 +92,11 @@
   display: flex;
   top: 0;
   left: 0;
-  display: flex;
   width: 100%;
   height: 100%;
 }
 
-.modal-active {
+.modal-close {
   display: none;
 }
 
