--- a/source/styles/css/map.css
+++ b/source/styles/css/map.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .map {
   min-height: 416px;
   background-image: url("./../../images/map.png");
@@ -62,4 +63,244 @@
   border-radius: 3px;
   border: none;
   cursor: pointer;
+}
+.map-contacts__btn:hover, .map-contacts__btn:focus {
+  background-color: #E74246;
+}
+.map-contacts__btn:active {
+  background-color: #D7373B;
+  color: rgba(250, 250, 250, 0.3);
+}
+
+/*Модальное окно*/
+.modal-container {
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.modal-close {
+  display: none;
+}
+
+.modal {
+  position: relative;
+  margin: auto;
+  background-color: #ffffff;
+  padding: 63px 100px 84px;
+  -webkit-box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 0.4);
+          box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 0.4);
+}
+.modal__auth {
+  width: 960px;
+}
+.modal__close-btn {
+  position: absolute;
+  padding: 0;
+  top: 78px;
+  right: 90px;
+  width: 21px;
+  height: 21px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+.modal__close-img:hover path {
+  fill: #FB565A;
+  fill-opacity: 100%;
+}
+.modal__close-img:active path {
+  fill: #FB565A;
+  fill-opacity: 10%;
+}
+.modal__title {
+  margin: 0;
+  font-size: 45px;
+  font-weight: 700;
+  line-height: 53px;
+  margin-bottom: 37px;
+}
+
+.auth-form__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 34px;
+}
+.auth-form__item {
+  margin-right: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.auth-form__item:last-child {
+  margin-right: 0;
+}
+.auth-form__title {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 18px;
+  margin-bottom: 9px;
+}
+.auth-form__input {
+  width: 360px;
+  height: 50px;
+  border: 2px solid #D7DCDE;
+  border-radius: 3px;
+  padding: 16px;
+}
+.auth-form__input::-webkit-input-placeholder {
+  font-family: "roboto", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 18px;
+  color: #444444;
+  opacity: 0.5;
+}
+.auth-form__input::-moz-placeholder {
+  font-family: "roboto", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 18px;
+  color: #444444;
+  opacity: 0.5;
+}
+.auth-form__input:-ms-input-placeholder {
+  font-family: "roboto", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 18px;
+  color: #444444;
+  opacity: 0.5;
+}
+.auth-form__input::-ms-input-placeholder {
+  font-family: "roboto", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 18px;
+  color: #444444;
+  opacity: 0.5;
+}
+.auth-form__input::placeholder {
+  font-family: "roboto", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 18px;
+  color: #444444;
+  opacity: 0.5;
+}
+.auth-form__input:hover, .auth-form__textarea:hover {
+  border-color: #B4B9BB;
+}
+.auth-form__input:focus, .auth-form__textarea:focus {
+  border-color: #000000;
+}
+.auth-form__input:invalid, .auth-form__textarea:invalid {
+  border-color: #E74246;
+}
+.auth-form__input:invalid::-webkit-input-placeholder, .auth-form__textarea:invalid::-webkit-input-placeholder {
+  color: #E74246;
+}
+.auth-form__input:invalid::-moz-placeholder, .auth-form__textarea:invalid::-moz-placeholder {
+  color: #E74246;
+}
+.auth-form__input:invalid:-ms-input-placeholder, .auth-form__textarea:invalid:-ms-input-placeholder {
+  color: #E74246;
+}
+.auth-form__input:invalid::-ms-input-placeholder, .auth-form__textarea:invalid::-ms-input-placeholder {
+  color: #E74246;
+}
+.auth-form__input:invalid::placeholder, .auth-form__textarea:invalid::placeholder {
+  color: #E74246;
+}
+.auth-form__text {
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.auth-form__textarea {
+  resize: none;
+  max-width: 760px;
+  min-height: 118px;
+  border: 2px solid #D7DCDE;
+  border-radius: 3px;
+  margin-bottom: 47px;
+  padding: 16px;
+}
+.auth-form__textarea::-webkit-input-placeholder {
+  font-family: "roboto", "Arial", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18px;
+  color: #444444;
+  opacity: 0.5;
+}
+.auth-form__textarea::-moz-placeholder {
+  font-family: "roboto", "Arial", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18px;
+  color: #444444;
+  opacity: 0.5;
+}
+.auth-form__textarea:-ms-input-placeholder {
+  font-family: "roboto", "Arial", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18px;
+  color: #444444;
+  opacity: 0.5;
+}
+.auth-form__textarea::-ms-input-placeholder {
+  font-family: "roboto", "Arial", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18px;
+  color: #444444;
+  opacity: 0.5;
+}
+.auth-form__textarea::placeholder {
+  font-family: "roboto", "Arial", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18px;
+  color: #444444;
+  opacity: 0.5;
+}
+.auth-form__btn {
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 18px;
+  text-transform: uppercase;
+  background-color: #FB565A;
+  color: #ffffff;
+  padding: 17px 83px;
+  display: block;
+  max-width: 259px;
+  border-radius: 3px;
+  border: none;
+  cursor: pointer;
+}
+.auth-form__btn:hover, .auth-form__btn:focus {
+  background-color: #E74246;
+}
+.auth-form__btn:active {
+  background-color: #D7373B;
+  color: rgba(250, 250, 250, 0.3);
 }/*# sourceMappingURL=map.css.map */
