--- a/source/styles/blocks/slider.scss
+++ b/source/styles/blocks/slider.scss
@@ -12,6 +12,11 @@
     position: relative;
   }
 
+  &__item {
+    position: absolute;
+    opacity: 0;
+  }
+
   &__item-active {
     width: 100%;
     min-height: 431px;
@@ -20,11 +25,6 @@
     background-position: right;
     position: absolute;
     opacity: 1;
-  }
-
-  &__item {
-    position: absolute;
-    opacity: 0;
   }
 
   &__item-wrapper {
@@ -60,8 +60,7 @@
     border-radius: 3px;
   }
 
-  &__item-btn:hover,
-  &__item-btn:focus {
+  &__item-btn:hover {
     background-color: $base-background-main-focus;
   }
 
@@ -74,11 +73,24 @@
 /*Пагинация*/
 .slider-pagination {
   &__wrapper {
+    list-style: none;
+    margin: 0;
+    padding: 0;
     display: flex;
     align-items: center;
     position: absolute;
     top: 317px;
     left: 50%;
+  }
+
+  &__item {
+    display: flex;
+    justify-content: space-between;
+    margin-right: 17px;
+  }
+
+  &__item:last-child {
+    margin-right: 0;
   }
 
   &__btn {
