--- a/source/styles/css/slider.css
+++ b/source/styles/css/slider.css
@@ -10,6 +10,10 @@
   padding: 0;
   position: relative;
 }
+.slider__item {
+  position: absolute;
+  opacity: 0;
+}
 .slider__item-active {
   width: 100%;
   min-height: 431px;
@@ -18,10 +22,6 @@
   background-position: right;
   position: absolute;
   opacity: 1;
-}
-.slider__item {
-  position: absolute;
-  opacity: 0;
 }
 .slider__item-wrapper {
   max-width: 515px;
@@ -52,7 +52,7 @@
   max-width: 240px;
   border-radius: 3px;
 }
-.slider__item-btn:hover, .slider__item-btn:focus {
+.slider__item-btn:hover {
   background-color: #E74246;
 }
 .slider__item-btn:active {
@@ -62,6 +62,9 @@
 
 /*Пагинация*/
 .slider-pagination__wrapper {
+  list-style: none;
+  margin: 0;
+  padding: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -71,6 +74,18 @@
   position: absolute;
   top: 317px;
   left: 50%;
+}
+.slider-pagination__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-right: 17px;
+}
+.slider-pagination__item:last-child {
+  margin-right: 0;
 }
 .slider-pagination__btn {
   width: 18px;
