--- a/source/styles/blocks/map.scss
+++ b/source/styles/blocks/map.scss
@@ -1,6 +1,5 @@
 @import './../global/variables.scss';
 
-
 .map {
   min-height: 416px;
   background-image: url('./../../images/map.png');
@@ -87,6 +86,7 @@
 }
 
 /*Модальное окно*/
+
 .modal-container {
   position: fixed;
   display: flex;
@@ -94,19 +94,22 @@
   left: 0;
   width: 100%;
   height: 100%;
-}
-
-.modal-close {
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 0;
   display: none;
 }
 
 .modal {
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%; 
+  transform: translate(-50%, -50%);
   margin: auto;
   background-color: $light-color-text;
   padding: 63px 100px 84px;
   box-shadow: 0 20px 40px 0 $special-color-box-shadow;
-  
+  z-index: 1;
+
   &__auth {
     width: 960px;
   }
@@ -142,6 +145,10 @@
   }
 }
 
+.modal.active {
+  display: block;
+}
+
 .auth-form {
   &__list {
     list-style: none;
@@ -162,7 +169,7 @@
     margin-right: 0;
   }
 
-  &__title{
+  &__title {
     font-size: 16px;
     font-weight: 700;
     line-height: 18px;
@@ -194,7 +201,7 @@
   &__textarea:focus {
     border-color: $base-color-text;
   }
-  
+
   &__input:invalid,
   &__textarea:invalid {
     border-color: $base-background-main-focus;
