--- a/source/styles/css/map.css
+++ b/source/styles/css/map.css
@@ -73,28 +73,31 @@
 }
 
 /*Модальное окно*/
-.modal-container {
+/* .modal-container {
   position: fixed;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-}
-
+} */
 .modal-close {
   display: none;
 }
 
 .modal {
-  position: relative;
-  margin: auto;
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  /* margin: auto; */
   background-color: #ffffff;
   padding: 63px 100px 84px;
   -webkit-box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 0.4);
           box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 0.4);
+  z-index: 1;
 }
 .modal__auth {
   width: 960px;
@@ -124,6 +127,10 @@
   font-weight: 700;
   line-height: 53px;
   margin-bottom: 37px;
+}
+
+.modal.active {
+  display: block;
 }
 
 .auth-form__list {
