--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -2,3 +2,12 @@
 @import "./layout/styles.scss";
 @import "./blocks/styles.scss";
 
+/* #overlay {
+  min-width: 100%;
+  min-height: 100%;
+  background-color: gray;
+  z-index: 0;
+  top: 0;
+  left: 0;
+  position: fixed;
+} */
