--- a/source/styles/blocks/about.scss
+++ b/source/styles/blocks/about.scss
@@ -28,7 +28,7 @@ ul {
     list-style-type: none;
   }
   
-  li::before {
+  .about__list li::before {
     content: "";
     width: 25px;
     height: 2px;
