--- a/source/styles/blocks/slider.scss
+++ b/source/styles/blocks/slider.scss
@@ -15,6 +15,8 @@
   &__item {
     position: absolute;
     opacity: 0;
+    transform: translateX(100%);
+    transition: transform 2s ease-in-out;
   }
 
   &__item-active {
@@ -25,6 +27,7 @@
     background-position: right;
     position: absolute;
     opacity: 1;
+    transform: translateX(0);
   }
 
   &__item-wrapper {
