добавляет стили к магазину

--- a/source/styles/blocks/styles.scss
+++ b/source/styles/blocks/styles.scss
@@ -1,8 +1,11 @@
 @use "navigation.scss";
 @use "user-navigation.scss";
 @use "slider.scss";
-@use "form.scss";
+@use "filter.scss";
 @use "about.scss";
 @use "map.scss";
 @use "services.scss";
 @use "modal.scss";
+@use "partners.scss";
+@use "templates.scss";
+@use "map-catalog";
