--- a/source/styles/blocks/about.scss
+++ b/source/styles/blocks/about.scss
@@ -1,132 +1,135 @@
-.about__block {
-    display: inline-block;
-    margin: 0 auto;
-    justify-content: space-between;
-}
-
 .about {
     display: flex;
     flex-wrap: wrap;
+    max-width: 1100px;
+    margin: 0 auto;
+    justify-content: space-between;
+    padding-bottom: 74px;
+
+    &__block {
+        margin: 0 auto;
+        justify-content: space-between;
+    }
+
+    &__list {
+        padding-inline-start: 0;
+        list-style: none;
+    }
+
+    &__title {
+        max-width: 650px;
+        max-height: 91px;
+        font-family: Roboto;
+        font-size: 45px;
+        font-weight: 500;
+        line-height: 45px;
+
+    }
+
+    &__list li {
+        position: relative;
+        list-style-type: none; 
+        margin-left: 35px;
+        margin-bottom: 20px;
+    }
+
+    &__list li::before {
+        content: "";
+        width: 25px;
+        height: 2px;
+        background-color: rgba(251, 86, 90, 1);
+        position: absolute;
+        left: -23px;
+        top: 11px;
+        transform: translate(-50%);
+    }
+
+    &__list-title {
+        font-family: Roboto;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 24px;
+        text-transform: uppercase;
+    }
+
+    &__list-item {
+        font-family: Roboto;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+    }
+
+    &__text {
+        max-width: 646px;
+        max-height: 49px;
+        font-family: Roboto;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        margin-bottom: 40px;
+    }
+
+    &__stat-list {
+        padding-inline-start: 0%;
+    }
+
+    &__stat-item {
+        display: inline-block;
+        width: 119px;
+        height: 37px;
+    }
+
+    &__stat-title {
+        font-family: Roboto;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 24px;
+        text-align: center;
+        text-transform: uppercase;
+        margin-top: 37px;
+        margin-bottom: 31px;
+    }
+
+    &__stat-percent {
+        color: rgb(0, 0, 0);
+        font-family: Roboto;
+        font-size: 45px;
+        font-weight: 700;
+        width: 78px;
+        height: 64px;
+        line-height: 64px;
+        letter-spacing: 0px;
+        text-align: left;
+        margin-bottom: 11px;
+    }
+
+    &__percent {
+        font-family: Roboto;
+        font-weight: 700;
+        font-size: 26px;
+        line-height: 40px;
+        width: 20px;
+        height: 40px;
+        padding-left: 0;
+        vertical-align: 15px;
+    }
+
+    &__stat-text {
+        width: 119px;
+        height: 37px;
+        color: rgb(40, 49, 54);
+        font-family: Roboto;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 18px;
+        letter-spacing: 0px;
+    }
+
+    &__block-1 {
+        margin-top: 35px;
+    }
+
+    &__block-2 {
+        padding-top: 39px;
+    }
 }
-
-ul {
-    padding-inline-start: 0;
-    list-style: none;
-  }
-
-.about__heading {
-    max-width: 650px;
-    max-height: 91px;
-    font-family: Roboto;
-    font-size: 45px;
-    font-weight: 500;
-    line-height: 45px;
-}
-
-.about__list li {
-    position: relative;
-    list-style-type: none;
-  }
-  
-  .about__list li::before {
-    content: "";
-    width: 25px;
-    height: 2px;
-    background-color: rgba(251, 86, 90, 1);
-    position: absolute;
-    left: -25px;
-    top: 11px;
-    transform: translate(-50%);
-  }
-
-.about__list-heading {
-
-    font-family: Roboto;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 24px;
-    text-transform: uppercase;
-}
-
-.about__list-item {
-    font-family: Roboto;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    
-}
-
-.about__text {
-    max-width: 646px;
-    max-height: 49px;
-    font-family: Roboto;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-}
-
-.stat__list {
-    padding-inline-start: 0%;
-}
-
-.stat__list_item {
-    display: inline-block;
-    width: 119px;
-    height: 37px;
-}
-
-.stat__heading {
-    font-family: Roboto;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 24px;
-    text-align: center;
-    text-transform: uppercase;
-}
-
-
-.stat__percent {
-    color: rgb(0, 0, 0);
-    font-family: Roboto;
-    font-size: 45px;
-    font-weight: 700;
-    width: 78px;
-    height: 64px;
-    line-height: 64px;
-    letter-spacing: 0px;
-    text-align: left;
-}
-
-.percent {
-    font-family: Roboto;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 40px;
-    width: 20px;
-    height: 40px;
-    margin-left: 0;
-}
-
-.stat__text {
-    width: 119px;
-    height: 37px;
-    color: rgb(40, 49, 54);
-    font-family: Roboto;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 18px;
-    letter-spacing: 0px;
-}
-
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-  }
