--- a/source/styles/css/filter.css
+++ b/source/styles/css/filter.css
@@ -172,4 +172,18 @@
   line-height: 55px;
   text-align: center;
   padding: 87px 0 108px 0;
+}
+
+.filter-pagination {
+  grid-area: pagin;
+  margin-bottom: 60px;
+  border: 2px solid rgb(7, 108, 39);
+}
+.filter-pagination__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }/*# sourceMappingURL=filter.css.map */
