--- a/source/styles/global/common.scss
+++ b/source/styles/global/common.scss
@@ -41,14 +41,13 @@
 }
 
 .container {
-	max-width: 1160px;
+	max-width: 1320px;
 	margin: 0 auto;
 	padding: 0 10px;
 	
-
-	@media screen and (min-width: $desktop) {
+	/* @media screen and (min-width: $desktop) {
 		padding: 0 80px;
-	}
+	} */
 }
 
 img {
